--- a/paper/IEEE-ICSC-2016/technical-reports/IEEE-ICSC-2016-constraints.tex
+++ b/paper/IEEE-ICSC-2016/technical-reports/IEEE-ICSC-2016-constraints.tex
@@ -221,7 +221,7 @@
 %                                     also used for the TOC unless
 %                                     \toctitle is used
 %
-\author{Thomas Bosch\inst{1} \and Benjamin Zapilko\inst{1} \and Joachim Wackerow\inst{1} \and Kai Eckert\inst{2}}
+\author{Thomas Hartmann\inst{1} \and Benjamin Zapilko\inst{1} \and Joachim Wackerow\inst{1} \and Kai Eckert\inst{2}}
 %
 \authorrunning{} % abbreviated author list (for running head)
 %
@@ -1384,13 +1384,12 @@ A matching triple has any literal / object except those explicitly excluded\foot
 		\item severity level: ERROR
 	\end{itemize}
 	
-	\textcolor{blue}{
 	\item \textbf{{\em DISCO-C-LITERAL-RANGES-02:}}
 {\em disco:cumulativePercentage} (domain: {\em disco:CategoryStatistics}) literals must be of the datatype {\em xsd:double} whose range should be restricted to be between 0 and 100.
 	\begin{itemize}
 		\item severity level: ERROR
 	\end{itemize}
-	}
+	
 	
 \end{itemize}
 
