--- a/paper/IEEE-ICSC-2016/technical-reports/IEEE-ICSC-2016-evaluation.tex
+++ b/paper/IEEE-ICSC-2016/technical-reports/IEEE-ICSC-2016-evaluation.tex
@@ -243,7 +243,7 @@
 %                                     also used for the TOC unless
 %                                     \toctitle is used
 %
-\author{Thomas Bosch\inst{1} \and Benjamin Zapilko\inst{1} \and Joachim Wackerow\inst{1} \and Kai Eckert\inst{2}}
+\author{Thomas Hartmann\inst{1} \and Benjamin Zapilko\inst{1} \and Joachim Wackerow\inst{1} \and Kai Eckert\inst{2}}
 %
 \authorrunning{} % abbreviated author list (for running head)
 %
