--- a/paper/IEEE-ICSC-2016/IEEE-ICSC-2016.tex
+++ b/paper/IEEE-ICSC-2016/IEEE-ICSC-2016.tex
@@ -2326,8 +2326,8 @@ The main findings are:
 
 \begin{enumerate}
 \item
-\emph{Data quality can be significantly improved when suitable constraint languages are developed which enable to define 
-constraints, which up to now can only be expressed by plain SPARQL, in an easy, concise, and intuitive way. Thereby, the more elaborate a vocabulary is, the more sophisticated and complex constraints are specified using SPARQL.\ke{Nachsatz verstehe ich nicht...}\bz{Thomas, meinst du: the more elaborate a vocabulary is, the more sophisticated and complex constraints are necessary which can up to now only specified using SPARQL.}}
+\emph{Data quality can be significantly improved when suitable constraint languages are developed enabling to define 
+constraints, which up to now can only be expressed by plain SPARQL, in an easy, concise, and intuitive way. Thereby, the more elaborate a vocabulary is, the more sophisticated and complex constraints are necessary which can up to now only be specified by SPARQL.}
 \item
 \emph{The fact that only 1/5 of all violations result from RDFS/OWL Based constraints, even though 1/3 of all constraints are RDFS/OWL Based, indicates good data quality for all vocabularies with regard to their formal specifications.}  
 \item
