--- a/paper/IEEE-ICSC-2016/IEEE-ICSC-2016.tex
+++ b/paper/IEEE-ICSC-2016/IEEE-ICSC-2016.tex
@@ -2346,8 +2346,10 @@ There is a significant demand for languages that support the expression of SPARQ
 %the further development of constraint languages should concentrate on expressing \emph{simple} and especially \emph{complex constraints} which up to now in most cases can only be expressed by plain SPARQL. 
 %\end{enumerate}
 
-We have been really impressed by the high quality of the QB and SKOS data. This is in contrast to the sometimes heard rumour that Linked Open Data lacks quality. We are actively involved in the further development and implementation of constraint languages and will use the results presented in the paper to set priorities on features where we expect the highest impact on the data quality of real-life data in the SBE domain.
-\ke{in die conclusion sollte noch rein, dass constraint languages per se funktionieren zur erhöhung der datenqualität und deswegen mit hochdruck an der weiterentwicklung gearbeitet werden muss.}
+We have been really impressed by the high quality of the QB and SKOS data. This is in contrast to the sometimes heard rumor that Linked Open Data lacks quality. We are actively involved in the further development and implementation of constraint languages and will use the results presented in the paper to set priorities on features where we expect the highest impact on the data quality of real-life data in the SBE domain.
+As the use of constraint languages per se enhances data quality, it must be continued working intensively on their further development.
+
+%\ke{in die conclusion sollte noch rein, dass constraint languages per se funktionieren zur erhöhung der datenqualität und deswegen mit hochdruck an der weiterentwicklung gearbeitet werden muss.}
 % An example of a floating figure using the graphicx package.
 % Note that \label must occur AFTER (or within) \caption.
 % For figures, \caption should occur after the \includegraphics.
